[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/graphics/enemies/Blood.png" type="Texture" id=1]
[ext_resource path="res://resources/graphics/enemies/touristDead.png" type="Texture" id=2]
[ext_resource path="res://scripts/Corpse.gd" type="Script" id=3]
[ext_resource path="res://resources/sounds/enemy_death1.ogg" type="AudioStream" id=4]
[ext_resource path="res://resources/sounds/enemy_death2.ogg" type="AudioStream" id=5]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 0, 0, 1, 0.615686, 0, 0, 1 )

[node name="Corpse" type="Node2D"]
z_index = 1
script = ExtResource( 3 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 5000
one_shot = true
lifetime_randomness = 0.48
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 129.03
initial_velocity_random = 0.26
angular_velocity = 720.0
angular_velocity_random = 1.0
linear_accel = -66.67
linear_accel_random = 0.09
scale_amount = 0.05
scale_amount_random = 0.05
color_ramp = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="FadeStartTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="DeathPlayer1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "SoundEffects"

[node name="DeathPlayer2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "SoundEffects"

[connection signal="timeout" from="FadeStartTimer" to="." method="_on_FadeStartTimer_timeout"]
